--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,11 @@ body {
 a {
   color: #00B7FF;
 }
+
+.container {
+  display: inline-block;
+}
+#overlay {
+  position: absolute;
+  z-index: 20;
+}
