--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<head>
+  <title>Projet 2</title>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"></script>
+  <!-- Load TensorFlow.js. This is required to use MobileNet. -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+</head>
+
+<body>
+  <div class="row"><input type="file" id="fileUload" accept="image/*" multiple="false" /></div>
+  <div class="row container">
+    <img id="img" src=""></img>
+    <canvas id="overlay"></canvas>
+  </div>
+
+  <!-- Place your code in the script tag below. You can also use an external .js file -->
+  <script>
+    const cocossd = () => {
+      const img = document.getElementById('img');
+      // Load the model.
+      cocoSsd
+        .load()
+        .then(model => {
+          model
+            .detect(img)
+            .then(predictions => {
+              console.log('Predictions (cocossd): ', predictions);
+              let c = document.getElementById("overlay");
+              let ctext = c.getContext('2d', {alpha: true});
+              ctext.fillStyle = 'green';
+              predictions.forEach((pred) => {
+                ctext.beginPath();
+                ctext.rect(
+                  pred.bbox[0],
+                  pred.bbox[1],
+                  pred.bbox[2],
+                  pred.bbox[3]
+                );
+                ctext.stroke();
+              })
+            })
+            ;
+        })
+        ;
+    };
+
+    document.getElementById("fileUload").onchange = () => {
+      const input = document.getElementById("fileUload");
+      let image = document.getElementById("img");
+      let c = document.getElementById("overlay")
+      if (input.files && input.files[0]) {
+        var reader = new FileReader();
+        reader.onload = (e) => {
+          image.src = e.target.result;
+          c.style.backgroundImage = e.target.result;
+        }
+        reader.readAsDataURL(input.files[0]);
+        c.style.width = image.naturalWidth
+        c.style.height = image.naturalHeight
+        cocossd();
+      }
+    }
+  </script>
+</body>
+
 </html>
