--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,11 @@ a {
   color: #00B7FF;
 }
 
-#overlay {
-  position: absolute;
-  z-index: 20;
+#loading{
+  position: sticky;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  z-index: 50;
+  display: none;
 }
