--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,8 +31,8 @@
       <table class="table">
         <thead>
           <th scope="col">Image</th>
-          <th style="text-align:center;:30%" scope="col">Type</th>
-          <th style="width:20%" scope="col">%</th>
+          <th style="text-align:center; width:30%" scope="col">Type</th>
+          <th style="text-align:center; width:20%" scope="col">%</th>
         </thead>
         <tbody id="prediction">
           <% data.forEach((d) => { %>
