--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     </p>
   </nav>
   <div class="row">
-    <div class="card col-sm-8 col-xs-12">
+    <div class="card col-sm-7 col-xs-12">
       <div class="card-body">
         <h5 class="card-title">Importer votre image</h5>
         <div class="row"><input type="file" id="fileUpload" accept="image/*" multiple="false" /></div>
@@ -27,8 +27,8 @@
         
       </div>
     </div>
-    <div class="col-sm-4">
-      <table class="table">
+    <div class="col-sm-5">
+      <table class="table thead-dark table-hover table-responsive">
         <thead>
           <th scope="col">Image</th>
           <th style="text-align:center; width:30%" scope="col">Type</th>
